# garply

./: .gitignore  CMakeLists.txt  GarplyConfig.cmake.in  README.md
garply/: CMakeLists.txt  garplinator.cc  garply.cc  garply.h  garply_version_h.in
tests/: .gitignore  CMakeLists.txt  test_garply.cc
